--- a/estilo.css
+++ b/estilo.css
@@ -1,12 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+
 body{
     background-color :black;
     color:aliceblue;
     display:flex;
     justify-content:center;
     align-items: center;
+    margin: 0;
+
 }
 button{
     background-color:brown;
 color:black;
 padding: 20px;
+font-family: "Bungee", sans-serif;
 }
